[metadata]
name = winspsrc
version = 20240309
description = Windows Serialized Property Store (SPS) resources (winspsrc)
long_description = winspsrc is a Python module part of winsps-kb to allow reuse of Windows Serialized Property Store (SPS) resources.
long_description_content_type = text/plain
url = https://github.com/libyal/winsps-kb
maintainer = Joachim Metz
maintainer_email = joachim.metz@gmail.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 2 - Pre-Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  winspsrc = winspsrc
packages = find:
python_requires = >=3.8
scripts =
  scripts/extract.py
  scripts/generate_docs.py
  scripts/merge_yaml.py

[options.package_data]
winspsrc =
  *.yaml
  data/*.yaml

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[sdist]
template = MANIFEST.in
manifest = MANIFEST

[sdist_test_data]
template = MANIFEST.test_data.in
manifest = MANIFEST.test_data

[bdist_wheel]
universal = 1
